--- a/index.ipynb
+++ b/index.ipynb
@@ -52,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
     "    len(travel_destinations)\n",
-    "    return e"
+    "    return len(travel_destinations)"
    ]
   },
   {
