--- a/index.ipynb
+++ b/index.ipynb
@@ -91,12 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    travel"
+    "    travel_destinations[0]"
    ]
   },
   {
