Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,8 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    travel_destinations[0]"
+    "    travel_destinations[0]\n",
+    "    return travel_destinations"
    ]
   },
   {
