--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    favorite_destination= 'madagascar'"
+    "    favorite_destination= 'madagascar'\n",
+    "    return favorite_destination"
    ]
   },
   {
