Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,7 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "\n",
+    "def favorite_desti\n",
     "favorite_destination()\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
