--- a/index.ipynb
+++ b/index.ipynb
@@ -196,7 +196,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    favorite_destination= ''\n",
+    "    favorite_destination= 'madagascar'\n",
+    "    \n",
     "favorite_destination()\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
