--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    favorite_destination= 'madagascar'\n",
-    "    travel_destinations.append()\n",
+    "    travel_destinations.append(favorite_destination)\n",
     "favorite_destination()\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
