Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,7 @@
     "def favorite_destination():\n",
     "    favorite_destination= 'madagascar'\n",
     "    travel_destinations.append(favorite_destination)\n",
-    "    return\n",
+    "    return favorite_destination\n",
     "favorite_destination()\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
