--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    pass"
+    "    for travel_destination in tr"
    ]
   },
   {
