--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for travel_destination in tr"
+    "    for travel_destination in travel_destinations\n",
+    "        trab"
    ]
   },
   {
