--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for travel_destination in travel_destinations\n",
-    "        trab"
+    "        travel_destinations.title()"
    ]
   },
   {
