--- a/index.ipynb
+++ b/index.ipynb
@@ -229,6 +229,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    captitalized_countries\n",
     "    for travel_destination in travel_destinations\n",
     "        travel_destinations.title(travel_destination)\n",
     "        "
