Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
     "def capitalize_countries():\n",
     "    captitalized_countries=[]\n",
     "    for travel_destination in travel_destinations\n",
-    "        capitalized_countries.append(travel_destinations.title{}\n",
+    "        capitalized_countries.append(travel_destinations.title[travel_destination])\n",
     "        "
    ]
   },
