--- a/index.ipynb
+++ b/index.ipynb
@@ -232,7 +232,8 @@
     "    captitalized_countries=[]\n",
     "    for travel_destination in travel_destinations\n",
     "        capitalized_countries.append(travel_destinations.title[travel_destination])\n",
-    "    ret    \n",
+    "        \n",
+    "    return capitaliz\n",
     "        "
    ]
   },
