Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,9 +223,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-13-cd4cf81b7c5d>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-cd4cf81b7c5d>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    for travel_destination in travel_destinations\u001b[0m\n\u001b[0m                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
@@ -233,7 +242,7 @@
     "    for travel_destination in travel_destinations\n",
     "        capitalized_countries.append(travel_destinations.title[travel_destination])\n",
     "        \n",
-    "    return capitaliz\n",
+    "    return capitalized_countries\n",
     "        "
    ]
   },
