--- a/index.ipynb
+++ b/index.ipynb
@@ -223,23 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-13-cd4cf81b7c5d>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-cd4cf81b7c5d>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    for travel_destination in travel_destinations\u001b[0m\n\u001b[0m                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    captitalized_countries=[]\n",
-    "    for travel_destination in travel_destinations\n",
+    "    for travel_destination in travel_destinations:\n",
     "        capitalized_countries.append(travel_destinations.title[travel_destination])\n",
     "        \n",
     "    return capitalized_countries\n",
