--- a/index.ipynb
+++ b/index.ipynb
@@ -229,9 +229,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalized_destinations=[]\n",
+    "    capitalize_destinations=[]\n",
     "    for travel_destination in travel_destinations:\n",
-    "        capitalized_countries.append(travel_destinations.title[travel_destination])\n",
+    "        capitalize_countries.append(travel_destinations.title[travel_destination])\n",
     "        \n",
     "    return capitalized_destinations\n",
     "        "
