Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
     "    for travel_destination in travel_destinations:\n",
     "        capitalize_countries.append(travel_destinations.title[travel_destination])\n",
     "        \n",
-    "    return capitalized_destinations\n",
+    "    return capitalize_destinations\n",
     "        "
    ]
   },
