--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalize_destinations=[]\n",
+    "    capitalized=[]\n",
     "    for travel_destination in travel_destinations:\n",
     "        capitalize_countries.append(travel_destinations.title[travel_destination])\n",
     "        \n",
