Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -229,11 +229,11 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalized=[]\n",
+    "    capitalized_countries=[]\n",
     "    for travel_destination in travel_destinations:\n",
-    "        capitalize_countries.append(travel_destinations.title[travel_destination])\n",
+    "        capitalized_countries.append(travel_destinations.title[travel_destination])\n",
     "        \n",
-    "    return capitalize_destinations\n",
+    "    return capitalized_destinations\n",
     "        "
    ]
   },
