Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
     "def capitalize_countries():\n",
     "    capitalized_countries=[]\n",
     "    for travel_destination in travel_destinations:\n",
-    "        capitalized_countries.append(travel_destinations.title[travel_destination])\n",
+    "        capitalized_countries.append(travel_destinations.title)\n",
     "        \n",
     "    return capitalized_countries\n",
     "        "
