Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -232,9 +232,7 @@
     "    capitalized_countries=[]\n",
     "    for travel_destination in travel_destinations:\n",
     "        capitalized_countries.append(travel_destinations.title())\n",
-    "        \n",
-    "    return capitalized_countries\n",
-    "        "
+    "    return capitalized_countries"
    ]
   },
   {
